# zcash-verify

./: .gitignore  Cargo.toml  LICENSE  README.md  badges.db  clean.sh  deployscript.sh  kill_server.sh  prove_basic.sh  prove_social.sh  start_server.sh  start_web.sh  zcash_prove.json
badge-server/: Cargo.toml
badge-server/migrations/: 001_init.sql
badge-server/src/: db.rs  main.rs
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  styles.css  sync.js
extension 2/: background.js  content.js  popup.css  popup.html  popup.js  styles.css
verifier/: Cargo.toml  build.rs
verifier/src/: badge.rs  challenge.rs  error.rs  lib.rs  main.rs  orchard_proof.rs  scanner.rs  transparent.rs  types.rs
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chain-height/: route.ts
web/src/app/api/health/: route.ts
web/src/app/api/register/: route.ts
web/src/app/api/scan/: route.ts
web/src/app/privacy/: page.tsx
web/src/components/: RegisterWizard.tsx  ServerStatus.tsx
web/src/lib/: api.ts  server-config.ts
