[package]
name = "badge-server"
version = "0.1.0"
edition = "2021"
description = "Badge verification server for Zcash ownership proofs"

[[bin]]
name = "badge-server"
path = "src/main.rs"

[dependencies]
zcash-verifier = { path = "../verifier" }

# Web server
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
