[package]
edition = "2021"
name = "zcash-verifier"
version = "0.1.0"
license = "MIT"
description = "Prove and verify Zcash ownership + balance tiers for transparent and shielded addresses"

[[bin]]
name = "verifier"
path = "src/main.rs"

[dependencies]
# Zcash crypto
orchard = { workspace = true }
zcash_address = { workspace = true }
zcash_protocol = { workspace = true }
zcash_note_encryption = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
zip32 = { workspace = true }
bip39 = { workspace = true }
incrementalmerkletree = { workspace = true }

# Transparent crypto
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }

# Signing / hashing
blake2b_simd = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

# gRPC (lightwalletd)
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

# CLI / serialization
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for submitting proofs to badge server)
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
